--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,17 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-**/[Ll]ibrary/
-**/[Tt]emp/
-**/[Oo]bj/
-**/[Bb]uild/
-**/[Bb]uilds/
-**/[Ll]ogs/
-**/[Uu]ser[Ss]ettings/
+/VR-Sorting/[Ll]ibrary/
+/VR-Sorting/[Tt]emp/
+/VR-Sorting/[Oo]bj/
+/VR-Sorting/[Bb]uild/
+/VR-Sorting/[Bb]uilds/
+/VR-Sorting/[Ll]ogs/
+/VR-Sorting/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
-**/[Mm]emoryCaptures/
+/VR-Sorting/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !**/[Aa]ssets/**/*.meta
